Change how article.view sizes to overflow in terms of height correctly. Padding to bottom of introduction so that the clouds don't overlap with text.

--- a/frontend/css/layout.css
+++ b/frontend/css/layout.css
@@ -52,9 +52,8 @@ article.view {
 	top: 0;
 	left: 0;
 	right: 0;
-	bottom: 0;
-	height: 100%;
 	width: 100%;
+	min-height: 100%;
 }
 
 a.inline {
@@ -72,6 +71,7 @@ a.inline {
 /* Introduction */
 
 article.intro {
+	padding-bottom: 250px;
 	background: hsl(48, 8%, 87%) linear-gradient(to bottom, hsl(190, 15%, 92%), hsl(72, 22%, 95%),  hsl(26, 76%, 92%), hsl(160, 5%, 77%), hsl(180, 10%, 76%)) center no-repeat;
 	background-size: cover;
 	background-image: url(../assets/clouds.jpg);
